<?xml version="1.0" encoding="utf-8"?>




<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">


<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/max_height_image_screen"
    android:scaleType="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0"
    app:srcCompat="@drawable/background" />

<Button
    android:id="@+id/button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:backgroundTint="@color/teal_700"
    android:text="@string/reload"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    app:layout_constraintVertical_bias="0" />

<EditText
    android:id="@+id/editTextTextPersonName"
    android:layout_width="0dp"
    android:layout_height="48dp"
    android:layout_marginTop="10dp"
    android:ems="10"
    android:hint="@string/enter_image_key"
    android:imeOptions="actionSearch"
    android:importantForAutofill="no"
    android:inputType="text"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="@+id/button"
    app:layout_constraintStart_toStartOf="@+id/button"
    app:layout_constraintTop_toBottomOf="@+id/button" />


<CheckBox
    android:id="@+id/checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checked="false"
    android:text="@string/keywords"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

<RadioGroup
    android:id="@+id/RadioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checkedButton="@id/All"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@+id/button"
    app:layout_constraintTop_toBottomOf="@+id/button">

    <RadioButton
        android:id="@+id/Space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space_radio"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="691dp" />

    <RadioButton
        android:id="@+id/Arvhitecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/architecture_radio"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="691dp" />

    <RadioButton
        android:id="@+id/Animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animals_radio"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="632dp" />
    <RadioButton
        android:id="@+id/All"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_radio"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="632dp" />


</RadioGroup>

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="@+id/imageView"
    app:layout_constraintEnd_toEndOf="@+id/imageView"
    app:layout_constraintStart_toStartOf="@+id/imageView"
    app:layout_constraintTop_toTopOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>
